kubernetes/ingress/are-we-together-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: notticeboard.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: social-service
                port:
                  number: 3000
